--- a/public/style.css
+++ b/public/style.css
@@ -54,7 +54,8 @@ a{
 
 .main-admin .contain-side-bar{
     width: 100%;
-    height: 100vh;
+    height: 100%;
+    min-height: 100vh;
     overflow-y: hidden;
     background-color: #1d2327;
 }
